# django-zakka

./: .git-blame-ignore-revs  CHANGELOG.md  Makefile  pyproject.toml  setup.cfg
djangorequests/: client.py
zakka/: conf.py  test.py
zakka/celery/: views.py
zakka/celery/management/commands/: tasks.py
zakka/celery/templates/zakka/celery/: tasks.html
zakka/contrib/: decorators.py
zakka/contrib/celery/: views.py
zakka/contrib/celery/management/commands/: tasks.py
zakka/contrib/celery/templates/zakka/celery/: tasks.html
zakka/contrib/prometheus/: views.py
zakka/contrib/utils/templatetags/: zakka.py
zakka/http/: client.py
zakka/mixins/: command.py
