[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-zakka"
version = "0.5.2"
license = { text = "MIT License" }
authors = [{ name = "Paul Traylor" }]
keywords = ["django"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
]
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "Django>=3.2",
    "importlib-metadata>=1.0; python_version < \"3.8\"",
]

[project.urls]
Issues = "http://github.com/kfdm/django-zakka/issues"
"Source Code" = "http://github.com/kfdm/django-zakka"
